<resources>
    <string name="app_name">SwooshClone</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="text">Text</string>
    <string name="todo">TODO</string>
    <string name="next">Next</string>
    <string name="swoosh_logo">swoosh_logo</string>
    <string name="beginner_baller">Beginner Baller</string>
    <string name="iam_a">Iam a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="searchleague">Looking for a co-ed beginner league near you....</string>

</resources>
