<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/desired_league"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:scaleType="fitCenter" android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/textView4" android:fontFamily="@font/montserrat"
            android:textSize="18sp" android:textColor="@android:color/white"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:textAlignment="center"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4">
        <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="167dp"
                tools:layout_editor_absoluteX="175dp" android:id="@+id/mensLeagueBtn" android:textOff="@string/mens"
                android:textOn="@string/mens" android:background="@drawable/swoosh_toogle" android:checked="false"
                android:textColor="@android:color/white" android:fontFamily="@font/montserrat"
                tools:text="@string/mens" android:onClick="onMensClicked"/>
        <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/womensLeagueBtn" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:textOff="@string/womens" android:textOn="@string/womens"
                android:background="@drawable/swoosh_toogle" android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat" tools:text="@string/womens" android:onClick="onWomensClicked"/>
        <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/coedLeagueBtn" android:textOff="@string/co_ed"
                android:textOn="@string/co_ed" android:background="@drawable/swoosh_toogle"
                android:textColor="@android:color/white" tools:text="@string/co_ed" android:text="@string/co_ed"
                android:onClick="onCoedClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/leagueNextBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3" android:background="@drawable/swoosh_button"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/white"
            android:onClick="leagueNextClick"/>
</android.support.constraint.ConstraintLayout>